# labelable

./: .gitignore  CLAUDE.md  Dockerfile  README.md  REQUIREMENTS.md  config.example.yaml  hacs.json  justfile  pyproject.toml  repository.yaml
.claude/skills/: creating-label-templates.md
.github/workflows/: ci.yaml  create-release.yaml  release.yaml
custom_components/zebra_printer/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  hacs.json  manifest.json  select.py  sensor.py  services.py  services.yaml  strings.json
custom_components/zebra_printer/protocol/: __init__.py  base.py  epl2.py  zpl.py
custom_components/zebra_printer/translations/: en.json
docs/: PYTHON_CLIENT.md
ha-addon/: .dockerignore  config.yaml  run.sh
labelable/: CHANGELOG.md  Dockerfile  config.yaml  run.sh
labelable/translations/: en.yaml
obsidian/: README.md
obsidian/labelable-obsidian/: esbuild.config.mjs  label.ts  main.js  main.ts  manifest.json  package-lock.json  package.json  queue.ts  settings.ts  tsconfig.json
scripts/: pre-commit
src/labelable/: __init__.py  __main__.py  app.py  config.py  queue.py
src/labelable/api/: __init__.py  mcp_server.py  routes.py  template_crud.py  ui.py
src/labelable/cli/: __init__.py  bridge.py  ptouch.py  render.py
src/labelable/integrations/: cloudflare_queue.py
src/labelable/models/: __init__.py  job.py  printer.py  template.py
src/labelable/printers/: __init__.py  base.py  bridge.py  epl2.py  ptouch.py  ptouch_protocol.py  zpl.py
src/labelable/templates/: __init__.py  bitmap_engine.py  engine.py  font_manifest.py  google_fonts.py  image_engine.py  jinja_engine.py
src/labelable/templates/converters/: __init__.py  epl2.py  ptouch.py  zpl.py
src/labelable/templates/elements/: __init__.py  base.py  code128.py  datamatrix.py  qrcode.py  text.py
src/labelable/templates/fonts/: __init__.py
templates/: _example.yaml  example-circle-wrap.yaml  example-circle.yaml  example-google-font.yaml  example-image.yaml  heatshrink-signals.yaml  ptouch-test.yaml
templates/calibration/: README.md  circle-50mm-300dpi.zpl
tests/: __init__.py  conftest.py  test_api.py  test_batch_rendering.py  test_bridge_api.py  test_bridge_daemon.py  test_bridge_printer.py  test_cert_watcher.py  test_cloudflare_queue.py  test_config.py  test_converters.py  test_elements.py  test_font_manifest.py  test_fonts.py  test_google_fonts.py  test_ha_integration.py  test_ha_protocol_parsing.py  test_image_engine.py  test_mcp_server.py  test_models.py  test_print_routes.py  test_printer_factory.py  test_printers.py  test_printers_base.py  test_ptouch_converter.py  test_ptouch_printer.py  test_ptouch_protocol.py  test_queue.py  test_template_api.py  test_template_crud.py  test_templates.py
